--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "description": "DA-Trie Service",
     "keywords": [
-        "double", "array", "trie", "service", "autumn"
+        "double", "array", "trie", "service", "autumn", "framework"
     ],
     "homepage": "https://github.com/Timandes/datrie-service",
     "license": "Apache-2.0",
@@ -11,16 +11,17 @@
         {"name": "Timandes White", "email": "timandes@php.net"}
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "autumn/autumn-framework": "~0.1.1"
     },
     "require-dev": {
         "doctrine/annotations": "^1.4",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "mintware-de/json-object-mapper": "^1.2"
     },
     "autoload": {
         "psr-4": {
-            "Timandes\\DaTrieServer\\": "src",
-            "Autumn\\Framework\\": "../autumn-framework/src"
+            "Timandes\\DaTrieServer\\": "src"
         }
     }
 }
