--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,11 @@
     ],
     "require": {
         "php": ">=7.0",
-        "autumn/autumn-framework": "~0.1.1"
+        "autumn/autumn-framework": "~0.2.0"
     },
     "require-dev": {
         "doctrine/annotations": "^1.4",
-        "psr/log": "^1.0",
-        "mintware-de/json-object-mapper": "^1.2"
+        "psr/log": "^1.0"
     },
     "autoload": {
         "psr-4": {
